contact content added

--- a/index.html
+++ b/index.html
@@ -25,4 +25,15 @@
 
 </section>
 </body>
+<footer>
+    <section class="contact">
+        <h1>contact me</h1>
+        
+       <a href="mailto:igirimpuhwedosta@gmail.com"><img src="send.jpeg" alt="" width="20px" height="20px">  igirimpuhwedosta@gmail.com </a><br>
+       <a href="#whatsapp"><img src="whatsapp.png" alt="" width="20px" heigh="20px"> +250780396766 </a><br>
+       <a href="#facebook"><img src="facebook.png" alt="" width="20px"heigh="20px" > Muhinde dosta </a><br>
+       <a href="#instgram"><img src="instgram.jpeg" alt="" width="20px"heigh="20px" > Muhinde dosta </a><br>
+
+    </section>
+</footer>
 </html>
