--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         <h1>contact me</h1>
         
        <a href="mailto:igirimpuhwedosta@gmail.com"><img src="send.jpeg" alt="" width="20px" height="20px">  igirimpuhwedosta@gmail.com </a><br>
-       <a href="#whatsapp"><img src="whatsapp.png" alt="" width="20px" heigh="20px"> +250780396766 </a><br>
-       <a href="#facebook"><img src="facebook.png" alt="" width="20px"heigh="20px" > Muhinde dosta </a><br>
-       <a href="#instgram"><img src="instgram.jpeg" alt="" width="20px"heigh="20px" > Muhinde dosta </a><br>
+       <a href="#whatsapp"><img src="whatsapp.png" alt="whatsapp" width="20px" heigh="20px"> +250780396766 </a><br>
+       <a href="#facebook"><img src="facebook.png" alt="facebook" width="30px"height="30px" > Muhinde dosta </a><br>
+       <a href="#instgram"><img src="instgram.jpeg" alt="instagram" width="30px"height="30px" > Muhinde dosta </a><br>
 
     </section>
 </footer>
